src/objects/ContractItem__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractStatus__c</fullName>
        <formula>TEXT( Contract__r.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Items</relationshipLabel>
        <relationshipName>Contract_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT(Contract__r.Account.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountModel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discount Model</label>
        <referenceTo>Discount_model__c</referenceTo>
        <relationshipLabel>Contract Items</relationshipLabel>
        <relationshipName>Contract_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrowthDiscount__c</fullName>
        <label>Growth Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Growth__c</fullName>
        <label>Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MovexTemplate__c</fullName>
        <formula>&apos;DEVN&apos; &amp; IF(CONTAINS(TEXT(OfferedDiscount__c),&apos;.&apos;) , 
    MID(TEXT(OfferedDiscount__c), 0 , FIND(&apos;.&apos;,TEXT(OfferedDiscount__c)) - 1 ) &amp; MID(TEXT(OfferedDiscount__c), FIND(&apos;.&apos;,TEXT(OfferedDiscount__c)) + 1, 2 ) , 
    TEXT(OfferedDiscount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Movex Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoDelete__c</fullName>
        <formula>Text( Contract__r.Status ) != &apos;Draft&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OfferedDiscount__c</fullName>
        <label>Offered Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PGsPurchasedDiscount__c</fullName>
        <label>PGs Purchased Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PGsPurchased__c</fullName>
        <label>PGs Purchased</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecommendedDiscount__c</fullName>
        <label>Recommended Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SegmentationDiscount__c</fullName>
        <label>Segmentation Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segmentation__c</fullName>
        <label>Segmentation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceRecords__c</fullName>
        <label>Source Records</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TGAtlantisManuallyUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG Atlantis Manually Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TGAtlantis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG Atlantis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TGCBCTManuallyUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG CBCT Manually Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TGCBCT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG CBCT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TGImplantSystem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG ImplantSystem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TGOssix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG Ossix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TGPrimescanManuallyUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG Primescan Manually Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TGPrimescan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG Primescan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TGSimplantManuallyUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG Simplant Manually Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TGSimplant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG Simplant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalDiscountExclECommerce__c</fullName>
        <label>Total Discount (excl. e-commerce)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNetSales2YAgo__c</fullName>
        <label>Total Net Sales 2Y Ago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNetSalesDiscount__c</fullName>
        <label>Total Net Sales Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNetSales__c</fullName>
        <label>Total Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueContractItemKey__c</fullName>
        <label>Unique Contract Item Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ofYearsPurchasingFromDSDiscount__c</fullName>
        <label># of Years Purchasing From DS Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofYearsPurchasingFromDS__c</fullName>
        <label># of Years Purchasing From DS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Contract Item</label>
    <nameField>
        <label>Contract Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Items</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NoUpdateActivatedContracts</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(Contract__r.Status, &quot;Activated&quot;) || ISPICKVAL( Contract__r.Approval_Status__c , &quot;Approved&quot;)) &amp;&amp; (Contract__r.RecordType.DeveloperName = &apos;newPricing&apos;) &amp;&amp; !CONTAINS($Profile.Name, &quot;#System&quot;) &amp;&amp; !ISPICKVAL($User.Team__c, &apos;Customer Service Implants Contracts&apos;)</errorConditionFormula>
        <errorMessage>Please note! You cannot change a Contract that is being approved or has been approved/activated</errorMessage>
    </validationRules>
</CustomObject>